src/test/resources/parse/ClassDuplication.out
error: Duplicated class declaration for class ClassDuplication
--> ./ClassDuplication.casc:3:6
2 |
3 | class ClassDuplication
          ^^^^^^^^^^^^^^^^= hint: Consider remove this class declaration